--- a/frontend/src/styles/NavBar.css
+++ b/frontend/src/styles/NavBar.css
@@ -1,9 +1,8 @@
 .container-nav-bar {
   display: flex;
-  position: fixed;
-  top: 0;
   width: 100%;
   height: 50px;
+  margin-top: 50px;
   justify-content: center;
   align-items: center;
   background-color: var(--bg-text-color);
