style: adjusting style header and navbar for min-width 768px

--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -32,3 +32,9 @@
   color: var(--bg-text-color);
   font-size: 15px;
 }
+
+@media (min-width: 768px) {
+  .container-header h2 {
+    font-size: 28px;
+  }
+}
