--- a/frontend/src/styles/NavBar.css
+++ b/frontend/src/styles/NavBar.css
@@ -53,3 +53,9 @@
   justify-content: center;
   align-items: center;
 }
+
+@media (min-width: 768px) {
+  .menu-item {
+    font-size: 20px;
+  }
+}
