--- a/frontend/src/styles/NavBar.css
+++ b/frontend/src/styles/NavBar.css
@@ -41,6 +41,11 @@
   color: var(--main-text-color);
   font-size: 14px;
   font-weight: 600;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .ativo {
