styles: adjusting styles

--- a/frontend/src/styles/CardCep.css
+++ b/frontend/src/styles/CardCep.css
@@ -1,6 +1,19 @@
 .card-cep {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   border: 1px solid var(--bg-text-color);
   margin: 2px;
   padding: 3px;
   font-weight: 700;
+  width: 80%;
+}
+
+@media (min-width: 768px) {
+  .card-cep {
+    margin: 20px;
+    width: 30%;
+  }
 }
